# Doc2Agent

./: .gitattributes  .gitignore  README.md  task.json  task_classification_prompt.txt  tool_registry.json
my_mcp_server/: pyproject.toml
my_mcp_server/my_mcp_server/: server.py  tool_registry.json
my_mcp_server/my_mcp_server/MCPTools/: convert_composition_text_to_wurcs_format_GET.py  convert_gws_format_to_wurcs_format_POST.py  get_lectins_POST.py  get_proteome_by_upid_GET.py  get_uniparc_entries_by_cross_reference_accessions_GET.py  get_uniparc_entries_by_sequence_POST.py  info_GET.py  link_GET.py  partial_match_wurcs_rdf_GET.py  poll_project_status_GET.py  search_gene_centric_proteins_GET.py  search_natural_variants_GET.py  search_protein_sequence_features_GET.py  search_proteomics_peptides_GET.py  search_uniparc_entries_GET.py  structure_search___substructure_GET.py  validate_composition_for_glycosylation_POST.py
my_mcp_server/src/custom_mcp_server/: server.py
my_mcp_server/src/custom_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
my_mcp_server/src/custom_mcp_server/MCPTools/: compound_property_tables_GET.py  find_GET.py  generate_glycan_image_POST.py  get_gene_centric_proteins_by_proteome_upid__deprecated__GET.py  get_human_lectome_POST.py  get_natural_variants_by_dbsnp_id_GET.py  get_predicted_lectins_POST.py  get_propeller_lectins_POST.py  get_proteomics_peptide_ptm_GET.py  get_proteomics_peptides_by_accession_GET.py  get_trefoil_lectins_POST.py  get_uniprot_protein_sequence_features_by_accession_GET.py  (+1 more)
(+4497 files in other folders)
