[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-mcp-server"
version = "0.1.0"
dependencies = [
    "fastmcp",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "requests",
]

[project.scripts]
custom-mcp-server = "custom_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = ["my_mcp_server"]
